--- a/src/main/resources/templates/form/formCreate.html
+++ b/src/main/resources/templates/form/formCreate.html
@@ -14,6 +14,7 @@
          $(document).ready(function () {
             $('.datepicker').datepicker({
                 format: 'dd/mm/yyyy',
+                startDate: new Date(),
                 todayBtn: true
             }).datepicker("setDate", "0");  //กำหนดเป็นวันปัจุบัน
         });
