--- a/src/main/resources/static/bootstrap-3.3.7-dist/css/bootstrap.css
+++ b/src/main/resources/static/bootstrap-3.3.7-dist/css/bootstrap.css
@@ -4758,8 +4758,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 3;
   color: #fff;
   cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #8dc63f;
+  border-color: #83ba37;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
