--- a/src/main/resources/templates/searchCase.html
+++ b/src/main/resources/templates/searchCase.html
@@ -4,6 +4,20 @@
     <title>Search Case</title>
     <div th:include="fragments/head :: head" th:remove="tag">Global Header</div>
     <link rel="stylesheet" type="text/css" href="css/table-case-css.css" th:href="@{/css/table-case-css.css}">
+    <style>
+        .pagination-centered {
+	        text-align: center;
+        }
+
+        .disabled {
+	        pointer-events: none;
+	        opacity: 0.5;
+        }
+
+        .pointer-disabled {
+	        pointer-events: none;
+        }
+    </style>
 </head>
 <body style="font-family:Verdana;">
 <!--  Banner -->
@@ -56,7 +70,7 @@
 </div>
 <div class="container">
     <h2>Search Case </h2>
-    <h5 th:text="${#lists.size(caseList)+ 'ทั้งหมด'}">ทั้งหมด</h5>
+    <h5 th:text="${formList.getTotalElements()+ 'ทั้งหมด'}">ทั้งหมด</h5>
     <table id="table-case">
         <tr>
             <th th:text="#{label.projectId}">Project Id</th>
@@ -65,18 +79,73 @@
             <th th:text="#{label.status}">Status</th>
             <th th:text="#{label.user}">User</th>
         </tr>
-        <tr th:each="case : ${caseList}">
-            <td><a th:text="${case.projectId}" th:href="${'/form/formView/' + case.id}"></a></td>
-            <td><a th:text="${case.projectName}" th:href="${'/form/formView/' + case.id}"></a></td>
-            <td><a th:text="${case.contact}" th:href="${'/form/formView/' + case.id}"></a></td>
-            <td><a th:text="${case.statusRequest}" th:href="${'/form/formView/' + case.id}"></a></td>
-            <td><a th:text="${case.createByUser.username}" th:href="${'/form/formView/'+case.id}"></a></td>
+        <tr th:each="form : ${formList}">
+            <td><a th:text="${form.projectId}" th:href="${'/form/formView/' + form.id}"></a></td>
+            <td><a th:text="${form.projectName}" th:href="${'/form/formView/' + form.id}"></a></td>
+            <td><a th:text="${form.contact}" th:href="${'/form/formView/' + form.id}"></a></td>
+            <td><a th:text="${form.statusRequest}" th:href="${'/form/formView/' + form.id}"></a></td>
+            <td><a th:text="${form.createByUser.username}" th:href="${'/form/formView/'+form.id}"></a></td>
         </tr>
     </table>
+    <div class="row">
+        <div class="form-group col-md-1">
+            <select class="form-control pagination" id="pageSizeSelect">
+                <option th:each="pageSize : ${pageSizes}" th:text="${pageSize}"
+                        th:value="${pageSize}"
+                        th:selected="${pageSize} == ${selectedPageSize}"></option>
+            </select>
+        </div>
+        <div th:if="${formList.totalPages != 1}"
+             class="form-group col-md-11 pagination-centered">
+            <ul class="pagination">
+                <li th:class="${formList.number == 0} ? disabled"><a
+                        class="pageLink"
+                        th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=1,projectId=${#request.getParameter('projectId')},projectName=${#request.getParameter('projectName')},contact=${#request.getParameter('contact')})}">&laquo;</a>
+                </li>
+                <li th:class="${formList.number == 0} ? disabled"><a
+                        class="pageLink"
+                        th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${formList.number},projectId=${#request.getParameter('projectId')},projectName=${#request.getParameter('projectName')},contact=${#request.getParameter('contact')})}">&larr;</a>
+                </li>
+                <li
+                        th:class="${formList.number == (page - 1)} ? 'active pointer-disabled'"
+                        th:each="page : ${#numbers.sequence(pager.startPage, pager.endPage)}">
+                    <a class="pageLink"
+                       th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${page},projectId=${#request.getParameter('projectId')},projectName=${#request.getParameter('projectName')},contact=${#request.getParameter('contact')})}"
+                       th:text="${page}"></a>
+                </li>
+                <li
+                        th:class="${formList.number + 1 == formList.totalPages} ? disabled">
+                    <a class="pageLink"
+                       th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${formList.number + 2},projectId=${#request.getParameter('projectId')},projectName=${#request.getParameter('projectName')},contact=${#request.getParameter('contact')})}">&rarr;</a>
+                </li>
+                <li
+                        th:class="${formList.number + 1 == formList.totalPages} ? disabled">
+                    <a class="pageLink"
+                       th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${formList.totalPages},projectId=${#request.getParameter('projectId')},projectName=${#request.getParameter('projectName')},contact=${#request.getParameter('contact')})}">&raquo;</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!--  footer -->
 <div th:replace="fragments/footer :: .footer"> menu Bar</div>
-<script>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var url_string = window.location.href;
+    var url = new URL(url_string);
+    var projectId = (url.searchParams.get("projectId")==null) ? "" :url.searchParams.get("projectId") ;
+    var projectName = (url.searchParams.get("projectName")==null) ? "" :url.searchParams.get("projectName");
+    var contact = (url.searchParams.get("contact")==null) ? "" :url.searchParams.get("contact");
+    $(document).ready(function() {
+    changePageAndSize();
+    });
+
+    function changePageAndSize() {
+    $('#pageSizeSelect').change(function(evt) {
+    window.location.replace("/searchCase?pageSize=" + this.value + "&page=1&projectId="+projectId+"&projecName="+projectName+"&contact="+contact);
+    });
+    }
+    /*]]>*/
 </script>
 </body>
 </html>
