fix error parameter

--- a/src/main/resources/templates/searchCase.html
+++ b/src/main/resources/templates/searchCase.html
@@ -142,7 +142,7 @@
 
     function changePageAndSize() {
     $('#pageSizeSelect').change(function(evt) {
-    window.location.replace("/searchCase?pageSize=" + this.value + "&page=1&projectId="+projectId+"&projecName="+projectName+"&contact="+contact);
+    window.location.replace("/searchCase?pageSize=" + this.value + "&page=1&projectId="+projectId+"&projectName="+projectName+"&contact="+contact);
     });
     }
     /*]]>*/
