fix error user duplicate

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,7 +18,7 @@
     <div class="row" >
         <div class="col-tab-35"></div>
         <div class="col-30">
-            <div ><input type="text" name="username"/></div>
+            <div ><input type="text" name="username" th:field="*{username}"/></div>
         </div>
     </div>
     <div class="row">
@@ -43,7 +43,7 @@
     <div class="row">
         <div class="col-tab-35"></div>
         <div class="col-30">
-            <div><input type="text" name="firstName"/></div>
+            <div><input type="text" name="firstName" th:field="*{firstName}"/></div>
         </div>
     </div>
     <div class="row">
@@ -55,7 +55,7 @@
     <div class="row">
         <div class="col-tab-35"></div>
         <div class="col-30">
-            <div><input type="text" WIDTH="100%" name="lastName"/></div>
+            <div><input type="text" WIDTH="100%" name="lastName" th:field="*{lastName}"/></div>
         </div>
     </div>
     <div class="row">
@@ -68,7 +68,7 @@
     <div class="row">
         <div class="col-tab-35"></div>
         <div class="col-30">
-            <div><input type="text" name="department"/></div>
+            <div><input type="text" name="department" th:field="*{department}"/></div>
         </div>
     </div>
     <br/>
