change text dialog

--- a/src/main/resources/templates/userView.html
+++ b/src/main/resources/templates/userView.html
@@ -95,7 +95,7 @@
             <!--<h2>Modal Header</h2>-->
         </div>
         <div class="modal-body">
-            <p>you want to delete file ?</p>
+            <label th:text="${'you want to change role ' + user.username+' ?'}"></label>
             <!--<p>Some other text...</p>-->
         </div>
         <div class="modal-footer">
