--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -68,7 +68,12 @@
     <div class="row">
         <div class="col-tab-35"></div>
         <div class="col-30">
-            <div><input type="text" name="department" th:field="*{department}"/></div>
+            <div>
+                <input type="text" name="department" th:field="*{department}" list="departmentList"/>
+                <datalist id="departmentList" th:each="dept : ${departmentList}">
+                    <option data-value="${dept}" th:text="${dept}">The answer</option>
+                </datalist>
+            </div>
         </div>
     </div>
     <br/>
