fix color button upload

--- a/src/main/resources/templates/searchCase.html
+++ b/src/main/resources/templates/searchCase.html
@@ -63,7 +63,7 @@
             <div class="col-tab-10"></div>
             <div class="col-tab-10"></div>
             <div class="col-10">
-                <button class="button" type="submit" value="Submit">Search</button>
+                <button class="buttonGreen width-100" type="submit" value="Submit">Search</button>
             </div>
         </div>
     </form>
