--- a/src/main/resources/static/css/Form-css.css
+++ b/src/main/resources/static/css/Form-css.css
@@ -10,7 +10,21 @@ input[type=text],input[type=password], select, textarea {
     border-radius: 4px;
     resize: vertical;
 }
-
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
 label {
     padding: 12px 12px 12px 0;
     display: inline-block;
