--- a/src/main/resources/templates/form/formViewAdmin.html
+++ b/src/main/resources/templates/form/formViewAdmin.html
@@ -252,7 +252,7 @@
                         </td>
                         <td width="30%">
                             <textarea name="*{fileReportList[__${rowStat.index}__].detail}"
-                                   th:field="*{fileReportList[__${rowStat.index}__].detail}"/>
+                                      th:field="*{fileReportList[__${rowStat.index}__].detail}"/>
                         </td>
                         <td width="10%">
                             <button class="buttonGreen width-100" type="button" name="addRowLoadTest"
@@ -265,13 +265,17 @@
                 </table>
             </div>
         </div>
-        <p></p>
+        <br/>
         <div class="row">
-            <input id="fileInput" type="file" name="file" onchange="updateSize();" multiple>
+            <div class="fileUpload buttonGreen">
+                <span>Upload</span>
+                <input id="fileInput" type="file" name="file" class="upload" onchange="updateSize();" multiple>
+            </div>
+            <br/>
             selected files: <span id="fileNum">0</span>;
             total size: <span id="fileSize">0</span>
         </div>
-        <p></p>
+        <br/>
         <div class="row">
             <input class="buttonGreen width-10" type="submit" value="Submit" onclick="waitingDialog.show();">
         </div>
