fix layout view

--- a/src/main/resources/templates/form/formView.html
+++ b/src/main/resources/templates/form/formView.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-tab-80"></div>
         <div class="col-20-right">
-            <label th:text="#{label.status}">status</label>:
+            <label th:text="#{label.status}">status</label>
             <label th:text="*{statusRequest}">status</label>
         </div>
     </div>
@@ -23,7 +23,7 @@
 
         <div class="col-tab-60"></div>
         <div class="col-40-right">
-            <label th:text="#{label.dateReceived}">Date Received</label>:
+            <label th:text="#{label.dateReceived}">Date Received</label>
             <label th:text="*{created}"></label>
         </div>
     </div>
