--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -10,7 +10,7 @@
     <script src="./dist-res/locales/bootstrap-datepicker.en-GB.min.js" th:src="@{/dist-res/locales/bootstrap-datepicker.en-GB.min.js}" charset="UTF-8" ></script>
     <link rel="stylesheet" type="text/css" href="css/Form-css.css" th:href="@{/css/Form-css.css}">
     <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/menu-bar-css.css}">
-    <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/row-col.css}">
+    <link rel="stylesheet" type="text/css" href="css/row-col.css" th:href="@{/css/row-col.css}">
     <link rel="stylesheet" type="text/css" href="css/button.css" th:href="@{/css/button.css}">
     <link href="./bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" th:href="@{/bootstrap-3.3.7-dist/css/bootstrap.css}" />
     <link href="./dist-res/css/bootstrap-datepicker.css" rel="stylesheet" th:href="@{/dist-res/css/bootstrap-datepicker.css}"/>
