--- a/src/main/resources/static/css/row-col.css
+++ b/src/main/resources/static/css/row-col.css
@@ -15,6 +15,11 @@
 	width: 10%;
 	margin-top: 5px;
 }
+.col-20{
+	float: left;
+	width: 20%;
+	margin-top: 5px;
+}
 .col-tab-35{
 	float: left;
 	width: 35%;
@@ -85,7 +90,7 @@
     clear: both;
 }
 @media screen and (max-width: 600px) {
-    .col-10,.col-15,.col-200right,.col-25,.col-30,.col-40-right, .col-65,.col-100 input[type=submit] {
+    .col-10,.col-15,.col-20-right,.col-20,.col-25,.col-30,.col-40-right, .col-65,.col-100 input[type=submit] {
         width: 100%;
         margin-top: 0;
         margin-right: 10px;
