--- a/src/main/resources/templates/form/formCreate.html
+++ b/src/main/resources/templates/form/formCreate.html
@@ -351,6 +351,7 @@
             </div>
         </div>
         <h3>Load Test SC: </h3>
+        <h5>เพื่อใช้ในการดูการทำงานของระบบ เมื่ออยู่ในสภาวะที่คาดว่าจะ เกิดขึ้นเมื่อมีการใช้งานจริง เช่น เราคาดไว้ว่า จะมีคนเข้ามาใช้งาน app เราประมาณ 100 คน เราก็สร้าง user เพื่อเข้าไปใช้พร้อมๆกัน แล้วดูว่าระบบจะทำงานได้หรือช้าลง เมื่อมี user เข้ามาใช้งานพร้อมๆกัน 100 คนหรือไม่</h5>
         <div class="row">
             <div class="col-100">
                 <table class="table-sc" width="100%">
@@ -394,6 +395,7 @@
             </div>
         </div>
         <h3>Reliability Test SC: </h3>
+        <h5>เป็นการเทสระบบแบบต่อเนื่องเพื่อทดสอบความน่าเชื่อถือซอฟแวร์ว่าสามารถทำงานได้อย่างต่อเนื่อง หรือเมื่อเกิดปัญหาระบบก็ยังสามารถกลับมาทำงานได้อย่างปรกติได้</h5>
         <div class="row">
             <div class="col-100">
                 <table class="table-sc" width="100%">
@@ -438,6 +440,7 @@
             </div>
         </div>
         <h3>Stress Test SC: </h3>
+        <h5>เป็นการเทสที่เราจะดูจำนวนมากที่สุดที่ระบบรับได้ หรือ จำนวนที่ user ที่รองรับได้สูงสุดจนกว่าระบบจะล่ม</h5>
         <div class="row">
             <div class="col-100">
                 <table class="table-sc" width="100%">
