--- a/src/main/resources/templates/form/formView.html
+++ b/src/main/resources/templates/form/formView.html
@@ -72,9 +72,9 @@
                 <thead>
                 <tr>
                     <th width="5%">No.</th>
-                    <th width="20%" th:text="#{label.detail}">Commend</th>
+                    <th width="20%" th:text="#{label.testCase}">Test Case</th>
                     <th width="10%" th:text="#{label.concurrent}">Concurrent</th>
-                    <th width="45%" th:text="#{label.dataTest}">Data Test</th>
+                    <th width="45%" th:text="#{label.detail}">Detail</th>
                     <th width="20%" th:text="#{label.other}">Other</th>
                     <th width="20%" th:text="#{label.scenarioPass}">Other</th>
                 </tr>
@@ -83,13 +83,13 @@
                 <tr th:each="loadtest,rowStat : *{loadTestScenarioList}">
                     <td th:text="${rowStat.count}">1</td>
                     <td>
-                        <label th:text="*{loadTestScenarioList[__${rowStat.index}__].detail}"/>
+                        <label th:text="*{loadTestScenarioList[__${rowStat.index}__].testCase}"/>
                     </td>
                     <td>
                         <label th:text="*{loadTestScenarioList[__${rowStat.index}__].concurrent}"/>
                     </td>
                     <td>
-                        <label th:text="*{loadTestScenarioList[__${rowStat.index}__].dataTest}"/>
+                        <label th:text="*{loadTestScenarioList[__${rowStat.index}__].detail}"/>
                     </td>
                     <td>
                         <label th:text="*{loadTestScenarioList[__${rowStat.index}__].other}"/>
@@ -110,9 +110,9 @@
                 <thead>
                 <tr>
                     <th width="5%">No.</th>
-                    <th width="20%" th:text="#{label.detail}">Commend</th>
+                    <th width="20%" th:text="#{label.testCase}">Test Case</th>
                     <th width="10%" th:text="#{label.concurrent}">Concurrent</th>
-                    <th width="45%" th:text="#{label.dataTest}">Data Test</th>
+                    <th width="45%" th:text="#{label.detail}">Detail</th>
                     <th width="20%" th:text="#{label.other}">Other</th>
                     <th width="20%" th:text="#{label.scenarioPass}">Other</th>
                 </tr>
@@ -121,14 +121,14 @@
                 <tr th:each="reliTest,rowStat : *{reliabilityTestScenarioList}">
                     <td th:text="${rowStat.count}">1</td>
                     <td>
-                        <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].detail}"/>
+                        <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].testCase}"/>
                     </td>
                     <td>
                         <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].concurrent}"/>
                     </td>
                     <td class="width-100px">
                         <label class="width-100px"
-                               th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].dataTest}"/>
+                               th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].detail}"/>
                     </td>
                     <td>
                         <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].other}"/>
@@ -149,9 +149,9 @@
                 <thead>
                 <tr>
                     <th width="5%">No.</th>
-                    <th width="20%" th:text="#{label.detail}">Commend</th>
+                    <th width="20%" th:text="#{label.testCase}">Test Case</th>
                     <th width="10%" th:text="#{label.concurrent}">Concurrent</th>
-                    <th width="45%" th:text="#{label.dataTest}">Data Test</th>
+                    <th width="45%" th:text="#{label.detail}">Detail</th>
                     <th width="20%" th:text="#{label.other}">Other</th>
                     <th width="20%" th:text="#{label.scenarioPass}">Other</th>
                 </tr>
@@ -160,13 +160,13 @@
                 <tr th:each="stressTest,rowStat : *{stressTestScenarioList}">
                     <td th:text="${rowStat.count}">1</td>
                     <td>
-                        <label th:text="*{stressTestScenarioList[__${rowStat.index}__].detail}"/>
+                        <label th:text="*{stressTestScenarioList[__${rowStat.index}__].testCase}"/>
                     </td>
                     <td>
                         <label th:text="*{stressTestScenarioList[__${rowStat.index}__].concurrent}"/>
                     </td>
                     <td>
-                        <label th:text="*{stressTestScenarioList[__${rowStat.index}__].dataTest}"/>
+                        <label th:text="*{stressTestScenarioList[__${rowStat.index}__].testCase}"/>
                     </td>
                     <td>
                         <label th:text="*{stressTestScenarioList[__${rowStat.index}__].other}"/>
