--- a/src/main/resources/templates/form/formViewAdmin.html
+++ b/src/main/resources/templates/form/formViewAdmin.html
@@ -103,9 +103,9 @@
                     <thead>
                     <tr>
                         <th width="5%">No.</th>
-                        <th width="20%" th:text="#{label.detail}">Commend</th>
+                        <th width="20%" th:text="#{label.testCase}">Test Case</th>
                         <th width="10%" th:text="#{label.concurrent}">Concurrent</th>
-                        <th width="45%" th:text="#{label.dataTest}">Data Test</th>
+                        <th width="45%" th:text="#{label.detail}">Detail</th>
                         <th width="20%" th:text="#{label.other}">Other</th>
                         <th width="20%" th:text="#{label.scenarioPass}">Other</th>
                     </tr>
@@ -119,13 +119,13 @@
                         </td>
 
                         <td>
-                            <label th:text="*{loadTestScenarioList[__${rowStat.index}__].detail}"/>
+                            <label th:text="*{loadTestScenarioList[__${rowStat.index}__].testCase}"/>
                         </td>
                         <td>
                             <label th:text="*{loadTestScenarioList[__${rowStat.index}__].concurrent}"/>
                         </td>
                         <td>
-                            <label th:text="*{loadTestScenarioList[__${rowStat.index}__].dataTest}"/>
+                            <label th:text="*{loadTestScenarioList[__${rowStat.index}__].detail}"/>
                         </td>
                         <td>
                             <label th:text="*{loadTestScenarioList[__${rowStat.index}__].other}"/>
@@ -146,9 +146,9 @@
                     <thead>
                     <tr>
                         <th width="5%">No.</th>
-                        <th width="20%" th:text="#{label.detail}">Commend</th>
+                        <th width="20%" th:text="#{label.testCase}">Test Case</th>
                         <th width="10%" th:text="#{label.concurrent}">Concurrent</th>
-                        <th width="45%" th:text="#{label.dataTest}">Data Test</th>
+                        <th width="45%" th:text="#{label.detail}">Detail</th>
                         <th width="20%" th:text="#{label.other}">Other</th>
                         <th width="20%" th:text="#{label.scenarioPass}">Other</th>
                     </tr>
@@ -161,13 +161,13 @@
                                    th:field="*{reliabilityTestScenarioList[__${rowStat.index}__].id}">
                         </td>
                         <td>
-                            <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].detail}"/>
+                            <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].testCase}"/>
                         </td>
                         <td>
                             <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].concurrent}"/>
                         </td>
                         <td>
-                            <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].dataTest}"/>
+                            <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].detail}"/>
                         </td>
                         <td>
                             <label th:text="*{reliabilityTestScenarioList[__${rowStat.index}__].other}"/>
@@ -189,9 +189,9 @@
                     <thead>
                     <tr>
                         <th width="5%">No.</th>
-                        <th width="20%" th:text="#{label.detail}">Commend</th>
+                        <th width="20%" th:text="#{label.testCase}">Test Case</th>
                         <th width="10%" th:text="#{label.concurrent}">Concurrent</th>
-                        <th width="45%" th:text="#{label.dataTest}">Data Test</th>
+                        <th width="45%" th:text="#{label.detail}">Detail</th>
                         <th width="20%" th:text="#{label.other}">Other</th>
                         <th width="20%" th:text="#{label.scenarioPass}">Other</th>
                     </tr>
@@ -204,13 +204,13 @@
                                    th:field="*{stressTestScenarioList[__${rowStat.index}__].id}">
                         </td>
                         <td>
-                            <label th:text="*{stressTestScenarioList[__${rowStat.index}__].detail}"/>
+                            <label th:text="*{stressTestScenarioList[__${rowStat.index}__].testCase}"/>
                         </td>
                         <td>
                             <label th:text="*{stressTestScenarioList[__${rowStat.index}__].concurrent}"/>
                         </td>
                         <td>
-                            <label th:text="*{stressTestScenarioList[__${rowStat.index}__].dataTest}"/>
+                            <label th:text="*{stressTestScenarioList[__${rowStat.index}__].detail}"/>
                         </td>
                         <td>
                             <label th:text="*{stressTestScenarioList[__${rowStat.index}__].other}"/>
