--- a/src/main/resources/templates/form/formEdit.html
+++ b/src/main/resources/templates/form/formEdit.html
@@ -353,9 +353,9 @@
                     <thead>
                     <tr>
                         <th width="5%">No.</th>
-                        <th width="20%" th:text="#{label.detail}">Commend</th>
+                        <th width="20%" th:text="#{label.testCase}">Test Case</th>
                         <th width="10%" th:text="#{label.concurrent}">Concurrent</th>
-                        <th width="45%" th:text="#{label.dataTest}">Data Test</th>
+                        <th width="45%" th:text="#{label.detail}">Detail</th>
                         <th width="20%" th:text="#{label.other}">Other</th>
                     </tr>
                     </thead>
@@ -367,13 +367,13 @@
                                    th:field="*{loadTestScenarioList[__${rowStat.index}__].id}">
                         </td>
                         <td>
-                            <input type="text" th:field="*{loadTestScenarioList[__${rowStat.index}__].detail}"/>
+                            <input type="text" th:field="*{loadTestScenarioList[__${rowStat.index}__].testCase}"/>
                         </td>
                         <td>
                             <input type="text" th:field="*{loadTestScenarioList[__${rowStat.index}__].concurrent}"/>
                         </td>
                         <td>
-                            <textarea type="text" th:field="*{loadTestScenarioList[__${rowStat.index}__].dataTest}"/>
+                            <textarea type="text" th:field="*{loadTestScenarioList[__${rowStat.index}__].detail}"/>
                         </td>
                         <td>
                             <input type="text" th:field="*{loadTestScenarioList[__${rowStat.index}__].other}"/>
@@ -397,9 +397,9 @@
                     <thead>
                     <tr>
                         <th width="5%">No.</th>
-                        <th width="20%" th:text="#{label.detail}">Commend</th>
+                        <th width="20%" th:text="#{label.testCase}">Test Case</th>
                         <th width="10%" th:text="#{label.concurrent}">Concurrent</th>
-                        <th width="45%" th:text="#{label.dataTest}">Data Test</th>
+                        <th width="45%" th:text="#{label.detail}">Detail</th>
                         <th width="20%" th:text="#{label.other}">Other</th>
                     </tr>
                     </thead>
@@ -411,7 +411,7 @@
                                    th:field="*{reliabilityTestScenarioList[__${rowStat.index}__].id}">
                         </td>
                         <td>
-                            <input type="text" th:field="*{reliabilityTestScenarioList[__${rowStat.index}__].detail}"/>
+                            <input type="text" th:field="*{reliabilityTestScenarioList[__${rowStat.index}__].testCase}"/>
                         </td>
                         <td>
                             <input type="text"
@@ -419,7 +419,7 @@
                         </td>
                         <td>
                             <textarea type="text"
-                                      th:field="*{reliabilityTestScenarioList[__${rowStat.index}__].dataTest}"/>
+                                      th:field="*{reliabilityTestScenarioList[__${rowStat.index}__].detail}"/>
                         </td>
                         <td>
                             <input type="text" th:field="*{reliabilityTestScenarioList[__${rowStat.index}__].other}"/>
@@ -442,9 +442,9 @@
                     <thead>
                     <tr>
                         <th width="5%">No.</th>
-                        <th width="20%" th:text="#{label.detail}">Commend</th>
+                        <th width="20%" th:text="#{label.testCase}">Test Case</th>
                         <th width="10%" th:text="#{label.concurrent}">Concurrent</th>
-                        <th width="45%" th:text="#{label.dataTest}">Data Test</th>
+                        <th width="45%" th:text="#{label.detail}">Detail</th>
                         <th width="20%" th:text="#{label.other}">Other</th>
                     </tr>
                     </thead>
