new banner edit footer fix code

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
     <div>
         <h3> contact us </h3>
         <div> Email : nattapoo@ais.co.th</div>
-        <div> phone : 02-2222222</div>
+        <div> phone : 02-029-3852</div>
     </div>
 </div>
 </body>
