--- a/src/main/resources/templates/fragments/banner.html
+++ b/src/main/resources/templates/fragments/banner.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-<div class="banner" style="background-color:#f1f1f1;padding:15px;">
-    <h1>Banner web</h1>
+<div class="banner" style="background-color:#8dc63f;">
+    <div>
+        <img th:src="@{/image/LR26.png}" width="100%" height="100%" />
+    </div>
 </div>
 </body>
 </html>
