add report page

--- a/src/main/resources/templates/fragments/menuBar.html
+++ b/src/main/resources/templates/fragments/menuBar.html
@@ -6,6 +6,7 @@
     <li th:class="${activeTab == 'form'}? 'active' : null"><a href="/form/formCreate">Form</a></li>
     <li th:class="${activeTab == 'searchCase'}? 'active' : null"><a href="/searchCase">Search Case</a></li>
     <li th:if="${roleUser=='ADMIN'}" th:class="${activeTab == 'userManagement'}? 'active' : null"><a href="/userManagement">User Management</a></li>
+    <li th:if="${roleUser=='ADMIN'}" th:class="${activeTab == 'report'}? 'active' : null"><a href="/report">Report</a></li>
     <li style="float:right"><a href="/logout">[[${#httpServletRequest.remoteUser}]] [Logout]</a></li>
 </ul>
 </body>
