--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -6,6 +6,18 @@
 	<title>Index</title>
 	<div th:include="fragments/head :: head" th:remove="tag">Global Header</div>
 	<link rel="stylesheet" type="text/css" href="css/table-case-css.css" th:href="@{/css/table-case-css.css}">
+	<script th:inline="javascript">
+        var token = $("meta[name='_csrf']").attr("content");
+        var header = $("meta[name='_csrf_header']").attr("content");
+        var objHeader = {};
+        objHeader[header] = token;
+        $(document).ready(function () {
+            $('.datepicker').datepicker({
+                format: 'dd/mm/yyyy',
+                todayBtn: true
+            }).datepicker("setDate", "0");  //กำหนดเป็นวันปัจุบัน
+        });
+	</script>
 	<style>
 .pagination-centered {
 	text-align: center;
@@ -25,68 +37,126 @@
 <!--  Banner -->
 <div th:replace="fragments/banner :: .banner"> menu Bar</div>
 <!--  menu -->
-<div th:replace="fragments/menuBar :: menuBar('index',*{role}== null ? '' : *{role})">menuBar</div>
-<!-- <h2>index [[${#httpServletRequest.remoteUser}]]</h2> -->
-<!--<div class="container">-->
-	<!--<h2>My Case </h2>-->
-	<!--<h5 th:text="${formList.getTotalElements()+ 'ทั้งหมด'}">ทั้งหมด</h5>-->
-	<!--<table id="table-case">-->
-		<!--<tr>-->
-			<!--<th>Project Id</th>-->
-			<!--<th>Project Name</th>-->
-			<!--<th>Contact</th>-->
-			<!--<th>Status</th>-->
-			<!--&lt;!&ndash;<th>User</th>&ndash;&gt;-->
-		<!--</tr>-->
-		<!--<tr th:each="form : ${formList}">-->
-			<!--<td><a th:text="${form.projectId}" th:href="${'/form/formView/' + form.id}"></a></td>-->
-			<!--<td><a th:text="${form.projectName}" th:href="${'/form/formView/' + form.id}"></a></td>-->
-			<!--<td><a th:text="${form.contact}" th:href="${'/form/formView/' + form.id}"></a></td>-->
-			<!--<td><a th:text="${form.statusRequest}" th:href="${'/form/formView/' + form.id}"></a></td>-->
-			<!--&lt;!&ndash;<td><a th:text="${case.userWeb.username}" th:href="${'/form/edit/' + case.id}"></a></td>&ndash;&gt;-->
-		<!--</tr>-->
-	<!--</table>-->
-	<!--<div class="row">-->
-		<!--<div class="form-group col-md-1">-->
-			<!--<select class="form-control pagination" id="pageSizeSelect">-->
-				<!--<option th:each="pageSize : ${pageSizes}" th:text="${pageSize}"-->
-						<!--th:value="${pageSize}"-->
-						<!--th:selected="${pageSize} == ${selectedPageSize}"></option>-->
-			<!--</select>-->
-		<!--</div>-->
-		<!--<div th:if="${formList.totalPages != 1}"-->
-			 <!--class="form-group col-md-11 pagination-centered">-->
-			<!--<ul class="pagination">-->
-				<!--<li th:class="${formList.number == 0} ? disabled"><a-->
-						<!--class="pageLink"-->
-						<!--th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=1)}">&laquo;</a>-->
-				<!--</li>-->
-				<!--<li th:class="${formList.number == 0} ? disabled"><a-->
-						<!--class="pageLink"-->
-						<!--th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${formList.number})}">&larr;</a>-->
-				<!--</li>-->
-				<!--<li-->
-						<!--th:class="${formList.number == (page - 1)} ? 'active pointer-disabled'"-->
-						<!--th:each="page : ${#numbers.sequence(pager.startPage, pager.endPage)}">-->
-					<!--<a class="pageLink"-->
-					   <!--th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${page})}"-->
-					   <!--th:text="${page}"></a>-->
-				<!--</li>-->
-				<!--<li-->
-						<!--th:class="${formList.number + 1 == formList.totalPages} ? disabled">-->
-					<!--<a class="pageLink"-->
-					   <!--th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${formList.number + 2},q=${#request.getParameter('q')})}">&rarr;</a>-->
-				<!--</li>-->
-				<!--<li-->
-						<!--th:class="${formList.number + 1 == formList.totalPages} ? disabled">-->
-					<!--<a class="pageLink"-->
-					   <!--th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${formList.totalPages})}">&raquo;</a>-->
-				<!--</li>-->
-			<!--</ul>-->
-		<!--</div>-->
-	<!--</div>-->
-<!--</div>-->
-<!--  footer -->
+<div th:replace="fragments/menuBar :: menuBar('report',*{role}== null ? '' : *{role})">menuBar</div>
+<div class="container">
+
+	<form action="/report#" th:action="@{/report}" th:object="${dateQueryReport}" method="post">
+		<div class="row">
+			<div class="col-tab-10"></div>
+			<div class="col-20">
+				<input id="targetStartDate" name="targetStartDate" th:class="datepicker" th:field="*{startDate}" data-date-format="dd/mm/yyyy"> dd/mm/yyyy
+			</div>
+			<div class="col-10" th:align="center" >
+				<label> ถึง </label>
+			</div>
+			<div class="col-20">
+				<input id="targetFinishDate" name="targetFinishDate" th:class="datepicker" data-date-format="dd/mm/yyyy"
+					   th:field="*{endDate}"> dd/mm/yyyy
+			</div>
+			<div class="col-20">
+				<button class="buttonGreen width-100" type="submit" value="Submit">Search</button>
+			</div>
+		</div>
+	</form>
+	<div class="row">
+		<div class="col-tab-10"></div>
+		<div class="col-15">
+			<label>ผลการค้นหา</label>
+		</div>
+		<div class="col-20">
+			<label th:text="*{searchStartDate}">startDate</label>
+		</div>
+		<div class="col-10">
+			<label>ถึง</label>
+		</div>
+		<div class="col-20">
+			<label th:text="*{searchEndDate}">endDate</label>
+		</div>
+
+	</div>
+	<div class="row">
+		<div class="col-tab-10"></div>
+		<div class="col-15">
+			<label>จำนวนงานที่เข้ามา</label>
+		</div>
+		<div class="col-20">
+			<label th:text="*{cJob}">startDate</label>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-tab-10"></div>
+		<div class="col-15">
+			<label>จำนวนงานที่กำลังดำเนินการ</label>
+		</div>
+		<div class="col-20">
+			<label th:text="*{pJob}">startDate</label>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-tab-10"></div>
+		<div class="col-15">
+			<label>จำนวนงานที่เสร็ดสิ้น</label>
+		</div>
+		<div class="col-20">
+			<label th:text="*{sJob}">startDate</label>
+		</div>
+	</div>
+	<table id="table-case">
+		<tr>
+			<th>Project Id</th>
+			<th>Project Name</th>
+			<th>Contact</th>
+			<th>Status</th>
+			<!--<th>User</th>-->
+		</tr>
+		<tr th:each="form : ${formList}">
+			<td><a th:text="${form.projectId}" th:href="${'/form/formView/' + form.id}"></a></td>
+			<td><a th:text="${form.projectName}" th:href="${'/form/formView/' + form.id}"></a></td>
+			<td><a th:text="${form.contact}" th:href="${'/form/formView/' + form.id}"></a></td>
+			<td><a th:text="${form.statusRequest}" th:href="${'/form/formView/' + form.id}"></a></td>
+			<!--<td><a th:text="${case.userWeb.username}" th:href="${'/form/edit/' + case.id}"></a></td>-->
+		</tr>
+	</table>
+	<div class="row">
+		<div class="form-group col-md-1">
+			<select class="form-control pagination" id="pageSizeSelect">
+				<option th:each="pageSize : ${pageSizes}" th:text="${pageSize}"
+						th:value="${pageSize}"
+						th:selected="${pageSize} == ${selectedPageSize}"></option>
+			</select>
+		</div>
+		<div th:if="${formList.totalPages != 1}"
+			 class="form-group col-md-11 pagination-centered">
+			<ul class="pagination">
+				<li th:class="${formList.number == 0} ? disabled"><a
+						class="pageLink"
+						th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=1)}">&laquo;</a>
+				</li>
+				<li th:class="${formList.number == 0} ? disabled"><a
+						class="pageLink"
+						th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${formList.number})}">&larr;</a>
+				</li>
+				<li
+						th:class="${formList.number == (page - 1)} ? 'active pointer-disabled'"
+						th:each="page : ${#numbers.sequence(pager.startPage, pager.endPage)}">
+					<a class="pageLink"
+					   th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${page})}"
+					   th:text="${page}"></a>
+				</li>
+				<li
+						th:class="${formList.number + 1 == formList.totalPages} ? disabled">
+					<a class="pageLink"
+					   th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${formList.number + 2},q=${#request.getParameter('q')})}">&rarr;</a>
+				</li>
+				<li
+						th:class="${formList.number + 1 == formList.totalPages} ? disabled">
+					<a class="pageLink"
+					   th:href="@{${#httpServletRequest.requestURI}(pageSize=${selectedPageSize}, page=${formList.totalPages})}">&raquo;</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
 <div th:replace="fragments/footer :: .footer"> menu Bar</div>
 <script th:inline="javascript">
     /*<![CDATA[*/
