--- a/src/main/resources/static/css/Form-css.css
+++ b/src/main/resources/static/css/Form-css.css
@@ -78,9 +78,9 @@ text-error {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-    .col-15, .col-65, input[type=submit] {
+    .col-15, .col-65, input[type=submit] ,button[type=button]{
         width: 100%;
-        margin-top: 0;
+        margin-top: 5px;
     }
 	.col-10{
 	width: 0%;
