--- a/src/main/resources/templates/reportRawData.html
+++ b/src/main/resources/templates/reportRawData.html
@@ -3,7 +3,7 @@
 	  xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Index</title>
+	<title>Report Raw Data</title>
 	<div th:include="fragments/head :: head" th:remove="tag">Global Header</div>
 	<link rel="stylesheet" type="text/css" href="css/table-case-css.css" th:href="@{/css/table-case-css.css}">
 	<script th:inline="javascript">
@@ -40,7 +40,7 @@
 <div th:replace="fragments/menuBar :: menuBar('reportRawData',*{role}== null ? '' : *{role})">menuBar</div>
 <div class="container">
 
-	<form action="/report#" th:action="@{/report}" th:object="${dateQueryReport}" method="post">
+	<form action="/reportRawData#" th:action="@{/reportRawData}" th:object="${dateQueryReport}" method="post">
 		<div class="row">
 			<div class="col-tab-10"></div>
 			<div class="col-20">
@@ -74,47 +74,76 @@
 		</div>
 
 	</div>
-	<div class="row">
-		<div class="col-tab-10"></div>
-		<div class="col-15">
-			<label>จำนวนงานที่เข้ามา</label>
-		</div>
-		<div class="col-20">
-			<label th:text="*{cJob}">startDate</label>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-tab-10"></div>
-		<div class="col-15">
-			<label>จำนวนงานที่กำลังดำเนินการ</label>
-		</div>
-		<div class="col-20">
-			<label th:text="*{pJob}">startDate</label>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-tab-10"></div>
-		<div class="col-15">
-			<label>จำนวนงานที่เสร็ดสิ้น</label>
-		</div>
-		<div class="col-20">
-			<label th:text="*{sJob}">startDate</label>
-		</div>
-	</div>
+	<label>Form Request</label>
 	<table>
 		<tr>
+			<th>ID</th>
 			<th>Project Id</th>
 			<th>Project Name</th>
 			<th>Contact</th>
+			<th>Department</th>
 			<th>Status</th>
+			<th>Created</th>
+			<th>username</th>
 			<!--<th>User</th>-->
 		</tr>
 		<tr th:each="form : ${formList}">
-			<td><a th:text="${form.projectId}" th:href="${'/form/formView/' + form.id}"></a></td>
-			<td><a th:text="${form.projectName}" th:href="${'/form/formView/' + form.id}"></a></td>
-			<td><a th:text="${form.contact}" th:href="${'/form/formView/' + form.id}"></a></td>
-			<td><a th:text="${form.statusRequest}" th:href="${'/form/formView/' + form.id}"></a></td>
-			<!--<td><a th:text="${case.userWeb.username}" th:href="${'/form/edit/' + case.id}"></a></td>-->
+			<td><label th:text="${form.id}"></label></td>
+			<td><label th:text="${form.projectId}"></label></td>
+			<td><label th:text="${form.projectName}"></label></td>
+			<td><label th:text="${form.contact}"></label></td>
+			<td><label th:text="${form.department}"></label></td>
+			<td><label th:text="${form.statusRequest}"></label></td>
+			<td><label th:text="${form.created}"></label></td>
+			<td><label th:text="${form.createByUser.username}"></label></td>
+		</tr>
+	</table>
+	<label>Load Test scenario</label>
+	<table>
+		<tr>
+			<th>ID</th>
+			<th>FormRequestID</th>
+			<th>Test Case</th>
+			<th>Pass</th>
+			<!--<th>User</th>-->
+		</tr>
+		<tr th:each="loadtest : ${loadTestList}">
+			<td><label th:text="${loadtest.id}"></label></td>
+			<td><label th:text="${loadtest.requestForm.id}"></label></td>
+			<td><label th:text="${loadtest.testCase}"></label></td>
+			<td><label th:text="${loadtest.scenarioPass}"></label></td>
+		</tr>
+	</table>
+	<label>Stress Test scenario</label>
+	<table>
+		<tr>
+			<th>ID</th>
+			<th>FormRequestID</th>
+			<th>Test Case</th>
+			<th>Pass</th>
+			<!--<th>User</th>-->
+		</tr>
+		<tr th:each="stressTest : ${stressTestList}">
+			<td><label th:text="${stressTest.id}"></label></td>
+			<td><label th:text="${stressTest.requestForm.id}"></label></td>
+			<td><label th:text="${stressTest.testCase}"></label></td>
+			<td><label th:text="${stressTest.scenarioPass}"></label></td>
+		</tr>
+	</table>
+	<label>Reliability Test scenario</label>
+	<table>
+		<tr>
+			<th>ID</th>
+			<th>FormRequestID</th>
+			<th>Test Case</th>
+			<th>Pass</th>
+			<!--<th>User</th>-->
+		</tr>
+		<tr th:each="reliabilityTest : ${reliabilityTestList}">
+			<td><label th:text="${reliabilityTest.id}"></label></td>
+			<td><label th:text="${reliabilityTest.requestForm.id}"></label></td>
+			<td><label th:text="${reliabilityTest.testCase}"></label></td>
+			<td><label th:text="${reliabilityTest.scenarioPass}"></label></td>
 		</tr>
 	</table>
 </div>
