--- a/src/main/resources/templates/form/formEdit.html
+++ b/src/main/resources/templates/form/formEdit.html
@@ -37,7 +37,7 @@
 <div class="container" th:fragment="form">
     <h3>แบบฟอร์มการขอใช้บริการ</h3>
     <h5 th:text="#{label.projectDetail}">Project Detail</h5>
-    <form action="/form#" th:action="@{/form/formEdit/}+*{id}" th:object="${requestForm}" method="post">
+    <form th:action="@{/form/formEdit/}+*{id}" th:object="${requestForm}" method="post">
         <input type="hidden" id="id" name="id" th:field="*{id}">
         <div class="row">
             <div class="col-10"></div>
